[gd_scene load_steps=5 format=3 uid="uid://bcd73fdbmwedu"]

[ext_resource type="Texture2D" uid="uid://cx2j3aymjgamp" path="res://Assets/foods/utensil/pan.svg" id="1_0vggj"]
[ext_resource type="Script" path="res://Scripts/dont_burn_game.gd" id="1_r3tp7"]

[sub_resource type="Animation" id="Animation_1p7i2"]
resource_name = "cook"
length = 2.0
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.95),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"setCooked"
}, {
"args": [],
"method": &"setBurned"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fhkko"]
_data = {
"cook": SubResource("Animation_1p7i2")
}

[node name="dontBurnGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_r3tp7")

[node name="panMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="pan" type="TextureRect" parent="panMargin"]
layout_mode = 2
texture = ExtResource("1_0vggj")
expand_mode = 1
stretch_mode = 5

[node name="burnAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fhkko")
}

[node name="food" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="offsetTimer" type="Timer" parent="."]
one_shot = true

[connection signal="gui_input" from="food" to="." method="_on_food_gui_input"]
[connection signal="timeout" from="offsetTimer" to="." method="_on_offset_timer_timeout"]
